# DenmarkGPT

./: .gitignore  .replit  README.md  actions.py  app.py  app_intro.md  app_utils.py  data.py  db.py  dst_api.py  intro.py  llm.py  map_viz.py  network.py  plot.py  pyproject.toml  query.py  replit.nix  sandbox.ipynb
.streamlit/: config.toml
archive/: actions.py  app.py  llm.py  network.py  plot.py
data/: subjects_graph.gml
dst/: app.py  app_funcs.py  data.py  eval.py  llm.py  plot.py  query.py
dst/db/: crud.py  db.py  models.py
scripts/: create_action_selector.py  create_embeddings.py  create_subjects_graph.py  get_table_info.py  get_table_metadata.py
