[tool.poetry]
description = ""
authors = ["Jonathan Prom Scharff <jonathanscharff@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
pandas = "2.1.1"
sqlmodel = "0.0.8"
geopandas = "0.14.0"
streamlit = "1.27.0"
plotly = "5.17.0"
networkx = "3.1"
openai = "0.28.1"
cohere = "4.27"
faiss-cpu = "1.7.4"
python-dotenv = "1.0.0"
pgvector = "0.2.3"
psycopg2 = "2.9.7"
matplotlib = "3.8.0"
colorspacious = "1.1.2"
streamlit-antd-components = "0.2.1"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"